# bne-hemeroteca-data

./: .gitignore  README.md  pyproject.toml
issues/: count_pdf_files.py  paginate_issues.py  scrape_issues.py  sum_pages.py
ocr/: README.md  count_md_files.py  run_batch_ocr.py  run_ocr.py  run_with_vllm_restart.sh  stats_ocr.py
publications/: README.md  analyze_publications.py  create_dataset.py  filter_publications.py  scrape_publications.py  upload_dataset.py
src/: __init__.py  data_utils.py
