[project]
name = "bne-hemeroteca-data"
version = "0.1.0"
description = "Scraper for BNE Digital Hemeroteca"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "huggingface_hub>=0.20.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]

