[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bne-hemeroteca-data"
version = "0.1.0"
description = "Scraper for BNE Digital Hemeroteca"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "huggingface_hub>=0.20.0",
    "olmocr>=0.4.12",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyarrow>=22.0.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "vllm==0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
